--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="s004">
       <form>
         <fieldset>
-          <legend>WHAT ARE YOU LOOKING FOR?</legend>
+          <legend>Z E U S</legend>
           <div class="inner-form">
             <div class="input-field">
               <input class="form-control" id="choices-text-preset-values" type="text" placeholder="Type to search..." />
@@ -23,11 +23,6 @@
             </div>
           </div>
           <div class="suggestion-wrap">
-            <span>New Arrivals</span>
-            <span>Ladies</span>
-            <span>Mens</span>
-            <span>Accessories</span>
-            <span>Sale</span>
           </div>
         </fieldset>
       </form>
