--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="s130">
       <form>
         <div class="inner-form">
+          <h1> ZEUS </h1>
           <div class="input-field first-wrap">
             <div class="svg-wrapper">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -23,7 +24,6 @@
             <button class="btn-search" type="button">SEARCH</button>
           </div>
         </div>
-        <span class="info">ex. Game, Music, Video, Photography</span>
       </form>
     </div>
     <script src="js/extention/choices.js"></script>
